--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 atomicwrites==1.1.5
 attrs==18.1.0
 AWSIoTPythonSDK==1.4.0
-coverage==4.5.1
+funcsigs==1.0.2
 mock==2.0.0
-more-itertools==4.2.0
-numpy==1.14.5
-pbr==4.1.0
-pluggy==0.6.0
+more-itertools==4.3.0
+pathlib2==2.3.2
+pbr==4.2.0
+pkg-resources==0.0.0
+pluggy==0.7.1
 py==1.5.4
-pytest==3.6.3
+scandir==1.9.0
 six==1.11.0
