--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,12 @@ python:
     - "2.7"
     - "3.5"
     - "3.6"
-install: pip install tox-travis
+install: 
+   - pip install -r requirements.txt
+   - pip install tox-travis coveralls
 script: tox
+   - tox
+   - coverage run -m py.test
+   - coverage report -m
+after_success:
+   - coveralls
