--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install: 
    - pip install -r requirements.txt
    - pip install tox-travis coveralls
-script: tox
+script: 
    - tox
    - coverage run -m py.test
    - coverage report -m
