--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
+*,cover
 *.cover
 .hypothesis/
 .pytest_cache/
@@ -102,3 +103,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+pytests.xml
