--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
-atomicwrites==1.1.5
-attrs==18.1.0
+atomicwrites==1.2.1
+attrs==18.2.0
 AWSIoTPythonSDK==1.4.0
-certifi==2018.8.13
+boto3==1.9.67
+botocore==1.12.67
+certifi==2018.11.29
 chardet==3.0.4
-coverage==4.0.3
+coverage==4.5.2
+docutils==0.14
 funcsigs==1.0.2
-idna==2.7
+idna==2.8
+jmespath==0.9.3
 mock==2.0.0
 more-itertools==4.3.0
-pathlib2==2.3.2
-pbr==4.2.0
-pluggy==0.7.1
-py==1.5.4
+pathlib2==2.3.3
+pbr==5.1.1
+pkg-resources==0.0.0
+pluggy==0.8.0
+py==1.7.0
+pytest==4.0.2
 python-coveralls==2.9.1
+python-dateutil==2.7.5
 PyYAML==3.13
-requests==2.19.1
+requests==2.21.0
+s3transfer==0.1.13
 scandir==1.9.0
-six==1.11.0
-urllib3==1.23
+six==1.12.0
+urllib3==1.24.1
