--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 atomicwrites==1.2.1
 attrs==18.2.0
 AWSIoTPythonSDK==1.4.0
+bleach==3.0.2
 boto3==1.9.67
 botocore==1.12.67
 certifi==2018.11.29
 chardet==3.0.4
+colorama==0.4.1
 coverage==4.5.2
 docutils==0.14
 funcsigs==1.0.2
@@ -15,14 +17,22 @@ more-itertools==4.3.0
 pathlib2==2.3.3
 pbr==5.1.1
 pkg-resources==0.0.0
+pkginfo==1.4.2
 pluggy==0.8.0
 py==1.7.0
+Pygments==2.3.1
 pytest==4.0.2
 python-coveralls==2.9.1
 python-dateutil==2.7.5
 PyYAML==3.13
+readme-renderer==24.0
 requests==2.21.0
+requests-toolbelt==0.8.0
 s3transfer==0.1.13
 scandir==1.9.0
 six==1.12.0
+tqdm==4.28.1
+twine==1.12.1
 urllib3==1.24.1
+webencodings==0.5.1
+zest.releaser==6.15.3
